chore: change details in index page

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -6,13 +6,13 @@
 <AuthorizeView>
     <Authorized>
         <div class="text-center mt-4">
-            <p class="text-blue-500">Olá, @context.User.Identity.Name! Bem-vindo de volta ao UpShift.</p>
+            <p class="text-blue-500">Hello, @context.User.Identity.Name! Welcome back!</p>
         </div>
     </Authorized>
 
     <NotAuthorized>
         <div class="text-center mt-4">
-            <p class="text-red-500">Olá, visitante! Por favor, faça login para continuar.</p>
+            <p class="text-red-500">Create an account to participate in an auction!</p>
         </div>
     </NotAuthorized>
 </AuthorizeView>
@@ -23,16 +23,14 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 mr-2">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
             </svg>
-            Quem Somos
+           Founders
         </h2>
         <p class="text-white">
-            O Diogo Almeida, mais conhecido pela sua alcunha “O Porcas”, sempre foi apaixonado por
-            veículos de quatro rodas, nesse sentido decidiu investir no seu futuro como mecânico automóvel.
-            Apesar da sua alcunha, o ”Porcas” sempre se destacou com a sua perícia a reparar veículos e o seu profissionalismo.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas lorem semper justo rutrum, nec hendrerit nulla cursus. Mauris lacus est, facilisis at est nec, consequat tempor tortor. Maecenas ornare, nisl et aliquet ullamcorper, lorem ante eleifend orci, et bibendum massa odio a leo. Sed id tellus fringilla, sagittis lectus ac, aliquam mi. In quis lectus sed velit ullamcorper sagittis a vitae lectus. Nulla efficitur libero interdum, malesuada sem ut, rutrum felis. Praesent vel lectus vitae est malesuada imperdiet sit amet id erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi non justo sit amet sem eleifend pulvinar in nec mauris. Sed sodales tincidunt nunc, vitae luctus augue auctor ac. Donec quis gravida felis. 
         </p>
         <p class="text-white mt-4">
-            Francisco Bóias, um grande entusiasta de automóveis clássicos, e rapidamente se tornou amigo de Porcas. Após alguns anos de
-            trabalho e negócios em conjunto, decidiram unir-se e criar um negócio de Leilões Online, denominado de UPSHIFT.
+            
+            Vestibulum sed ligula et nisi convallis fringilla. Curabitur ornare finibus quam ut elementum. Nulla facilisis velit nec urna congue lacinia. Nunc luctus, purus nec vulputate suscipit, elit erat porta elit, et ultricies tellus nisi sed enim. Etiam vitae tincidunt purus. Praesent quis turpis libero. Curabitur eros felis, mollis vel mi sit amet, aliquam pulvinar mi. Praesent viverra arcu a est suscipit, eu volutpat risus rutrum. In hac habitasse platea dictumst. Morbi commodo sem magna, id porta turpis vehicula luctus. Cras vitae condimentum magna. Ut tincidunt massa est, et porttitor ante consequat ut. Maecenas mollis, eros eget lobortis ullamcorper, massa mauris auctor tortor, eget ultricies arcu lectus ac ante. Donec tempor lorem et lobortis volutpat. 
         </p>
     </section>
 
@@ -40,30 +38,23 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 mr-2">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
         </svg>
-        Leilões Online
+        Online Auctions
     </h2>
     <p class="text-white">
-        Através do website do leilão os fundadores têm como objetivo introduzir veículos e respetivas
-        características pertinentes para possibilitar a sua venda. Para além disto, procuram pessoas que possuam exemplares raros, veículos com história e até veículos de média e alta gama, para
-        que sejam introduzidos no leilão.
+        Mauris at lacus volutpat, consectetur ex non, pharetra augue. Suspendisse sed lectus at sapien tristique viverra ac non ipsum. Suspendisse non lacus vitae eros cursus malesuada. Nulla maximus est ut varius aliquet. Nulla elementum laoreet elit commodo cursus. Vestibulum posuere sapien mi. Mauris et lacus mauris. Quisque feugiat ex dolor, et fermentum felis posuere porta. Phasellus posuere velit sed rutrum tristique. Duis luctus vulputate lectus ut dictum. Suspendisse malesuada quam elit, et consectetur metus laoreet vitae. Vivamus eget maximus risus. 
     </p>
     <p class="text-white mt-4">
-        Uma vez que haja um acordo do proprietário do veículo para leiloar o seu veículo, os fundadores
-        criam um anúncio informativo e descritivo com base nas informações disponibilizadas pelo
-        proprietário, desde o histórico do veículo e aspetos relevantes por quem está na posse de uma
-        máquina de quatro rodas.
+        Nullam et nulla eget nisi ullamcorper dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sed leo nulla. Curabitur vitae finibus eros. In a enim ullamcorper, consequat leo in, vulputate nisi. Pellentesque tristique varius congue. Vestibulum rhoncus quis augue nec mattis. Praesent consequat ultrices eros nec vehicula. Ut eget orci ac neque semper consequat sed nec odio. Proin et quam mi. Fusce tincidunt porta dapibus. Sed sodales risus vel velit ultricies ultricies. Cras pretium massa eu lorem finibus, eget maximus nisi fringilla. In finibus est quis lectus varius, ut dictum mi faucibus. 
     </p>
     <p class="text-white mt-4">
-        A intenção é atrair uma grande comunidade de entusiastas, tal
-        como os próprios fundadores, para um ambiente seguro, de grande interesse e paixão pelas
-        máquinas de quatro rodas.
+        Vestibulum at quam pharetra, dignissim lectus vulputate, lobortis felis. In hac habitasse platea dictumst. Curabitur ac quam et dolor ultricies euismod. Morbi eu magna sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus lobortis dignissim metus, vel interdum odio cursus sed. Quisque eu purus sapien. Donec quis dictum leo, sed consequat neque.
     </p>
 
     <section class="mt-20 mb-8">
         <div class="bg-blue-500 text-white p-4 rounded-md">
-            <h2 class="text-2xl font-bold mb-2">Junte-se a nós hoje!</h2>
-            <p class="mb-4">Faça parte da nossa comunidade de entusiastas de automóveis.</p>
-            <a href="/register" class="bg-white text-blue-500 px-4 py-2 rounded-md">Registe-se agora</a>
+            <h2 class="text-2xl font-bold mb-2">Join us today!</h2>
+            <p class="mb-4">Became a part of our community today!</p>
+            <a href="/register" class="bg-white text-blue-500 px-4 py-2 rounded-md">Register</a>
         </div>
     </section>
 </div>
